use-cases/mwi/istio-spiffe/sockshop/catalogue-external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-external
  namespace: sock-shop
  labels:
    app: catalogue
spec:
  selector:
    app: catalogue
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: LoadBalancer
